--- a/2_Manipulation_Pulling.ipynb
+++ b/2_Manipulation_Pulling.ipynb
@@ -141,8 +141,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bot = ry.BotOp(C, useRealRobot=False)\n",
-    "bot.home(C)"
+    "# bot = ry.BotOp(C, useRealRobot=False)\n",
+    "# bot.home(C)"
    ]
   },
   {
@@ -164,23 +164,17 @@
      "output_type": "stream",
      "text": [
       "  -- feasible:0\n",
-      "     { time: 0.043493, evals: 140, done: 1, feasible: 1, sos: 0.0551733, f: 0, ineq: 0, eq: 0.0920524 }\n",
+      "     { time: 0.055786, evals: 200, done: 1, feasible: 1, sos: 0.0388209, f: 0, ineq: 0, eq: 0.0466495 }\n",
       "  -- feasible:sub_motion_0--0\n",
-      "     { time: 0.026816, evals: 34, done: 1, feasible: 1, sos: 0.459208, f: 0, ineq: 6.01906e-08, eq: 0.000153713 }\n",
+      "     { time: 0.022937, evals: 40, done: 1, feasible: 1, sos: 0.340838, f: 0, ineq: 4.91366e-08, eq: 9.94883e-05 }\n",
       "  -- feasible:sub_motion_1--0\n",
-      "     { time: 0.004879, evals: 8, done: 1, feasible: 1, sos: 0.0658799, f: 0, ineq: 0, eq: 3.90804e-05 }\n",
+      "     { time: 0.003394, evals: 8, done: 1, feasible: 1, sos: 0.0490332, f: 0, ineq: 0, eq: 3.76931e-05 }\n",
       "  -- feasible:1\n",
-      "     { time: 0.020329, evals: 67, done: 1, feasible: 1, sos: 0.0335756, f: 0, ineq: 0, eq: 0.169063 }\n",
+      "     { time: 0.047843, evals: 79, done: 1, feasible: 1, sos: 0.0359101, f: 0, ineq: 0, eq: 0.0466592 }\n",
       "  -- feasible:sub_motion_0--1\n",
-      "     { time: 0.043263, evals: 52, done: 1, feasible: 1, sos: 0.288627, f: 0, ineq: 0.000613689, eq: 0.000278802 }\n",
+      "     { time: 0.027747, evals: 50, done: 1, feasible: 1, sos: 0.134496, f: 0, ineq: 0.0037492, eq: 0.000513818 }\n",
       "  -- feasible:sub_motion_1--1\n",
-      "     { time: 0.00312, evals: 7, done: 1, feasible: 1, sos: 0.00712288, f: 0, ineq: 0, eq: 4.26719e-06 }\n",
-      "  -- feasible:2\n",
-      "     { time: 0.041599, evals: 118, done: 1, feasible: 1, sos: 0.0281162, f: 0, ineq: 0, eq: 0.102084 }\n",
-      "  -- feasible:sub_motion_0--2\n",
-      "     { time: 0.016104, evals: 22, done: 1, feasible: 1, sos: 0.20141, f: 0, ineq: 6.43639e-07, eq: 3.47831e-05 }\n",
-      "  -- feasible:sub_motion_1--2\n",
-      "     { time: 0.003969, evals: 7, done: 1, feasible: 1, sos: 0.0150897, f: 0, ineq: 0, eq: 8.63889e-06 }\n"
+      "     { time: 0.003446, evals: 8, done: 1, feasible: 1, sos: 0.141808, f: 0, ineq: 0, eq: 6.58088e-05 }\n"
      ]
     },
     {
@@ -190,7 +184,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 11\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(attempt_count):\n\u001b[1;32m      6\u001b[0m \ttarget_position \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      7\u001b[0m \t\tmidpoint[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m.15\u001b[39m, \u001b[38;5;241m.15\u001b[39m),\n\u001b[1;32m      8\u001b[0m \t\tmidpoint[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m.15\u001b[39m, \u001b[38;5;241m.15\u001b[39m),\n\u001b[1;32m      9\u001b[0m \t\t\u001b[38;5;241m0.\u001b[39m]\n\u001b[0;32m---> 11\u001b[0m \tsuccess, path \u001b[38;5;241m=\u001b[39m \u001b[43mpull\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbox\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget_position\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m \t\u001b[38;5;28;01mif\u001b[39;00m success:\n\u001b[1;32m     14\u001b[0m \t\tbot\u001b[38;5;241m.\u001b[39mmove(path, [\u001b[38;5;241m3\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[5], line 11\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(attempt_count):\n\u001b[1;32m      6\u001b[0m \ttarget_position \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      7\u001b[0m \t\tmidpoint[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m.15\u001b[39m, \u001b[38;5;241m.15\u001b[39m),\n\u001b[1;32m      8\u001b[0m \t\tmidpoint[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m.15\u001b[39m, \u001b[38;5;241m.15\u001b[39m),\n\u001b[1;32m      9\u001b[0m \t\t\u001b[38;5;241m0.\u001b[39m]\n\u001b[0;32m---> 11\u001b[0m \tsuccess, path \u001b[38;5;241m=\u001b[39m \u001b[43mpull\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbox\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget_position\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m \t\u001b[38;5;66;03m# if success:\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \t\u001b[38;5;66;03m# \tbot.move(path, [3])\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \t\u001b[38;5;66;03m# \twhile bot.getTimeToEnd() > 0.:\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \t\u001b[38;5;66;03m# \t\tbot.sync(C)\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \tsuccess_count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m success \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n",
       "Cell \u001b[0;32mIn[3], line 23\u001b[0m, in \u001b[0;36mpull\u001b[0;34m(obj, target_pos, info, vis)\u001b[0m\n\u001b[1;32m     20\u001b[0m \t\u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m, []\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m vis:\n\u001b[0;32m---> 23\u001b[0m \t\u001b[43mM1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplay\u001b[49m\u001b[43m(\u001b[49m\u001b[43mC\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m \tC\u001b[38;5;241m.\u001b[39mattach(gripper, obj)\n\u001b[1;32m     25\u001b[0m \tM2\u001b[38;5;241m.\u001b[39mplay(C, \u001b[38;5;241m1.\u001b[39m)\n",
       "File \u001b[0;32m~/Robotic_Manipulation/manipulation.py:545\u001b[0m, in \u001b[0;36mManipulationModelling.play\u001b[0;34m(self, C, duration)\u001b[0m\n\u001b[1;32m    543\u001b[0m C\u001b[38;5;241m.\u001b[39msetJointState(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpath[t])\n\u001b[1;32m    544\u001b[0m C\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstep \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mt\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minfo\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 545\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mduration\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
@@ -210,10 +204,10 @@
     "\t\n",
     "\tsuccess, path = pull(box, target_position, str(l), vis=True)\n",
     "\n",
-    "\tif success:\n",
-    "\t\tbot.move(path, [3])\n",
-    "\t\twhile bot.getTimeToEnd() > 0.:\n",
-    "\t\t\tbot.sync(C)\n",
+    "\t# if success:\n",
+    "\t# \tbot.move(path, [3])\n",
+    "\t# \twhile bot.getTimeToEnd() > 0.:\n",
+    "\t# \t\tbot.sync(C)\n",
     "\t\t\n",
     "\tsuccess_count += 1 if success else 0\n",
     "\t\n",
