--- a/5_Manipulation_Shelf.ipynb
+++ b/5_Manipulation_Shelf.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,6 @@
     "\tkeypoints = M.solve()\n",
     "\tM.komo.report(plotOverTime=True)\n",
     "\tif not M.feasible:\n",
-    "\t\t# C.view(True, f\"{M.feasible}\")\n",
     "\t\treturn False, []\n",
     "\t\n",
     "\tfor i, k in enumerate(keypoints):\n",
@@ -128,15 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  -- infeasible:shelf_task\n",
-      "     { time: 0.915251, evals: 200, done: 1, feasible: 0, sos: 0.430689, f: 0, ineq: 0.187772, eq: 0.725134 }\n"
+      "  -- feasible:shelf_task\n",
+      "     { time: 0.663022, evals: 200, done: 1, feasible: 1, sos: 0.375818, f: 0, ineq: 0.176862, eq: 0.493641 }\n"
      ]
     }
    ],
