--- a/5_Manipulation_Shelf.ipynb
+++ b/5_Manipulation_Shelf.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,15 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  -- feasible:shelf_task\n",
-      "     { time: 0.663022, evals: 200, done: 1, feasible: 1, sos: 0.375818, f: 0, ineq: 0.176862, eq: 0.493641 }\n"
+      "  -- infeasible:shelf_task\n",
+      "     { time: 1.13621, evals: 181, done: 1, feasible: 0, sos: 0.786429, f: 0, ineq: 0.993675, eq: 7.07702 }\n"
      ]
     }
    ],
