--- a/5_Manipulation_Shelf.ipynb
+++ b/5_Manipulation_Shelf.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,15 +127,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  -- infeasible:shelf_task\n",
-      "     { time: 1.13621, evals: 181, done: 1, feasible: 0, sos: 0.786429, f: 0, ineq: 0.993675, eq: 7.07702 }\n"
+      "  -- feasible:shelf_task\n",
+      "     { time: 1.00964, evals: 200, done: 1, feasible: 1, sos: 0.37581, f: 0, ineq: 0.176955, eq: 0.494093 }\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[56], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m \tC\u001b[38;5;241m.\u001b[39mgetFrame(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msmall_box_inside_0_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msc[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msc[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \\\n\u001b[1;32m      7\u001b[0m \t\t\t\u001b[38;5;241m.\u001b[39msetColor(c)\n\u001b[1;32m      8\u001b[0m C\u001b[38;5;241m.\u001b[39mview()\n\u001b[0;32m----> 9\u001b[0m success, _ \u001b[38;5;241m=\u001b[39m \u001b[43mpick_place\u001b[49m\u001b[43m(\u001b[49m\u001b[43mboxes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshelf_coor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[55], line 23\u001b[0m, in \u001b[0;36mpick_place\u001b[0;34m(boxes, shelf_coor, vis)\u001b[0m\n\u001b[1;32m     21\u001b[0m \t\tC\u001b[38;5;241m.\u001b[39mattach(gripper, boxes[i\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m])\n\u001b[1;32m     22\u001b[0m \tC\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstep \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 23\u001b[0m \t\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1.\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m, keypoints\n\u001b[1;32m     27\u001b[0m M1 \u001b[38;5;241m=\u001b[39m M\u001b[38;5;241m.\u001b[39msub_motion(\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
