--- a/1_Manipulation_Pushing.ipynb
+++ b/1_Manipulation_Pushing.ipynb
@@ -148,8 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# bot = ry.BotOp(C, useRealRobot=False)\n",
-    "# bot.home(C)"
+    "bot = ry.BotOp(C, useRealRobot=False)\n",
+    "bot.home(C)"
    ]
   },
   {
@@ -227,10 +227,10 @@
     "\t\n",
     "\tsuccess, path = push(box, target_position, str(l), vis=True)\n",
     "\n",
-    "\t# if success:\n",
-    "\t# \tbot.move(path, [3])\n",
-    "\t# \twhile bot.getTimeToEnd() > 0.:\n",
-    "\t# \t\tbot.sync(C)\n",
+    "\tif success:\n",
+    "\t\tbot.move(path, [3])\n",
+    "\t\twhile bot.getTimeToEnd() > 0.:\n",
+    "\t\t\tbot.sync(C)\n",
     "\t\t\n",
     "\tsuccess_count += 1 if success else 0\n",
     "\t\n",
