--- a/4_Manipulation_Bridge.ipynb
+++ b/4_Manipulation_Bridge.ipynb
@@ -80,7 +80,7 @@
     "\t\n",
     "\t# Pick place waypoints\n",
     "\tM = manip.ManipulationModelling(C, helpers=[gripper])\n",
-    "\tM.setup_pick_and_place_sequence(gripper, boxes)\n",
+    "\tM.setup_pick_and_place_sequence(gripper, table, boxes)\n",
     "\n",
     "\t# Box 1\n",
     "\tgrasp_direction = np.random.choice([\"x\", \"y\"])\n",
