--- a/5_Manipulation_Shelf.ipynb
+++ b/5_Manipulation_Shelf.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "def pick_place(boxes: list[str], shelf_coor: list[list[int]], vis: bool=False) -> bool:\n",
     "\tM = manip.ManipulationModelling(C, \"shelf_task\", helpers=[gripper])\n",
-    "\tM.setup_pick_and_place_sequence(gripper, boxes, accumulated_collisions=False)\n",
+    "\tM.setup_pick_and_place_sequence(gripper, table, boxes, accumulated_collisions=False)\n",
     "\n",
     "\tfor i, sc in enumerate(shelf_coor):\n",
     "\t\ttime = i*2+1\n",
